--- a/front-end/green_terrace/pubspec.yaml
+++ b/front-end/green_terrace/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  cloud_firestore: ^5.4.2
+  firebase_auth: ^5.3.0
+  provider: ^6.1.2
+  firebase_core: ^3.5.0
+  firebase_ui_auth: ^1.15.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  change_app_package_name: ^1.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
