--- a/front-end/green_terrace/pubspec.yaml
+++ b/front-end/green_terrace/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.1.2
   firebase_core: ^3.5.0
   firebase_ui_auth: ^1.15.0
+  http: ^1.2.2
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
